--- a/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application.properties
+++ b/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application.properties
@@ -1,17 +1,28 @@
 # environment
-spring.datasource.chainscan.jdbc-url=jdbc:mysql://rinkeby-mysql8.database.svc.cluster.local:3306/chainscan_rinkeby_test?characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
+spring.datasource.chainscan.jdbc-url=jdbc:mysql://10.233.59.153:3306/chainscan_bnb_2?characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
 spring.datasource.chainscan.username=root
 spring.datasource.chainscan.password=ZxcvAsdf
+
+spring.datasource.marketplace.jdbc-url=jdbc:mysql://10.233.59.153:3306/chainscan2?characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
+spring.datasource.marketplace.username=root
+spring.datasource.marketplace.password=ZxcvAsdf
+
+spring.datasource.wallet.jdbc-url=jdbc:mysql://exchange-mysql5-7.database.svc.cluster.local:3306/wallet?characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
+spring.datasource.wallet.username=root
+spring.datasource.wallet.password=ZxcvAsdf
+
 evm.chain.scanStep=1
 evm.chain.processStep=1
-evm.chain.chainId=186
+evm.chain.chainId=97
 evm.chain.chainType=EVM_PoS
-evm.chain.chainRpcUrl=https://bsc.getblock.io/testnet/?api_key=cffe89af-585f-44d8-a5d8-fe2e4ca3f9d2
+#evm.chain.chainRpcUrl=http://vmtest.infra.powx.io/v1
+#evm.chain.chainRpcUrl=https://matic-mumbai.chainstacklabs.com/
+#evm.chain.chainRpcUrl=https://dtxtestnet.chainfra.io/v1/df8371a1d8cbc835147df382bb1144a9
+#evm.chain.chainRpcUrl=https://bsc.getblock.io/testnet/?api_key=cffe89af-585f-44d8-a5d8-fe2e4ca3f9d2
 #evm.chain.chainRpcUrl=http://ethereum-client-sandbox.chain-sandbox.svc.cluster.local:8545
+evm.chain.chainRpcUrl=https://bnbtestnet.powx.io
 
 evm.chain.rocketmqSrvAddr=rocketmq-namesrv.database.svc.cluster.local:9876
-
-
 
 # non-environment
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
@@ -19,7 +30,9 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.jpa.show-sql=false
 spring.jpa.database=mysql
 #
-spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.generate-ddl=false
+#spring.jpa.hibernate.ddl-auto=none
 
 evm.chain.dtxRpcSecret=c111f8f97ab74642bdcdfa0d27cd96f7
 
@@ -32,8 +45,14 @@ spring.datasource.hikari.minimum-idle=20
 spring.datasource.hikari.max-lifetime=600000
 spring.datasource.hikari.idle-timeout=600000
 
-start.block.number=1000000
+#start.block.number=1314550
+start.block.number=29695006
+watcher.confirm.block=3
+watcher.process.concurrent.switch=true
+#bnb usdt合约
+watcher.contract.l2=0xb9E99C0EC829dBf885c7e8275bFdF1D4A521D5eb
 
+watcher.transaction.bridge.group=dtx-watcher-transaction-bridge-group
 
-
-
+#watcher.nft.auction.address=0x265B27e08344CD5B7a8BA197cDEcf43FEd5cdE74
+watcher.nft.auction.address=0xdBa5ecd09fDf979A0707f570b3cF21fd1bEFdCe7
