add batch plugin

--- a/watcher/watcher-bootstrap/src/main/resources/application.yml
+++ b/watcher/watcher-bootstrap/src/main/resources/application.yml
@@ -32,6 +32,10 @@ management:
     defaults:
       enabled: false
 
+watcher.plugin:
+  batchSwitch: false
+
+
 logging:
     level:
         root: info
