--- a/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application.properties
+++ b/watcher/watcher-plugin/watcher-plugin-evm/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # environment
-spring.datasource.chainscan.jdbc-url=jdbc:mysql://10.233.59.153:3306/chainscan_bnb_2?characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
+spring.datasource.chainscan.jdbc-url=jdbc:mysql://10.233.59.153:3306/chainscan?characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
 spring.datasource.chainscan.username=root
 spring.datasource.chainscan.password=ZxcvAsdf
 
@@ -30,8 +30,8 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.jpa.show-sql=false
 spring.jpa.database=mysql
 #
-#spring.jpa.hibernate.ddl-auto=none
-#spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto=none
 
 evm.chain.dtxRpcSecret=c111f8f97ab74642bdcdfa0d27cd96f7
