--- a/watcher/watcher-bootstrap/pom.xml
+++ b/watcher/watcher-bootstrap/pom.xml
@@ -74,6 +74,12 @@
 
         <dependency>
             <groupId>ai.everylink.chainscan</groupId>
+            <artifactId>watcher-plugin-batch</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ai.everylink.chainscan</groupId>
             <artifactId>watcher-plugin-nft-auction</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
