fix bug of batch

--- a/watcher/watcher-bootstrap/src/main/resources/application.yml
+++ b/watcher/watcher-bootstrap/src/main/resources/application.yml
@@ -33,7 +33,8 @@ management:
       enabled: false
 
 watcher.plugin:
-  batchSwitch: false
+  batchSwitch: true
+  coordinatorRpcUrl: http://127.0.0.1:8547
 
 
 logging:
